--- a/MentalFitnessTracker_byJuhiDwivedi.ipynb
+++ b/MentalFitnessTracker_byJuhiDwivedi.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Inconsequential-24/MentalFitnessTracker/blob/main/MentalFitnessTracker_byJuhiDwivedi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "HFczY0sOGB0b"
       },
       "source": [
@@ -1546,8 +1536,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZP70luwn/bxTb5WNf/w2u",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOZP70luwn/bxTb5WNf/w2u"
     },
     "kernelspec": {
       "display_name": "Python 3",
