--- a/MentalFitnessTracker_byJuhiDwivedi.ipynb
+++ b/MentalFitnessTracker_byJuhiDwivedi.ipynb
@@ -1053,27 +1053,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cApb8OiMHc9C",
-        "outputId": "ece08d1f-8a1a-4d92-dc38-81cfbf67c696"
+        "id": "cApb8OiMHc9C"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-27-20bc13c9ced4>:2: FutureWarning: The default value of numeric_only in DataFrame.mean is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
-            "  df=df.fillna(df.mean())\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#df.drop(['Entity','Code','Year'],axis=1,inplace=True)\n",
-        "df=df.fillna(df.mean())\n",
+        "df=df.fillna(df.mean(numeric_only=True))\n",
         "\n",
         "x=df[['Prevalence - Schizophrenia - Sex: Both - Age: Age-standardized (Percent)',\n",
         "       'Prevalence - Bipolar disorder - Sex: Both - Age: Age-standardized (Percent)',\n",
@@ -1536,7 +1523,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZP70luwn/bxTb5WNf/w2u"
+      "authorship_tag": "ABX9TyNzMpUg/WPsb9L4u/n9pQY/"
     },
     "kernelspec": {
       "display_name": "Python 3",
